# ACF-Coalescing-LLVM

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE
autotest/: buildSrc.sh  test.sh
autotest/llvm-ir/: 0-arithmetic.ll  1-conditional.ll  2-loop.ll
autotest/src/: 0-arithmetic.c  1-conditional.c  2-loop.c
fixed-bench/: README.txt
fixed-bench/gaussian/: Makefile  gaussian  gaussian.cu  run
fixed-bench/lavaMD/: lavaMD  main.c  main.h  makefile  out
fixed-bench/lavaMD/kernel/: kernel_gpu_cuda.cu  kernel_gpu_cuda_wrapper.cu  kernel_gpu_cuda_wrapper.h
fixed-bench/nw/: Makefile  needle  needle_kernel.cu
fixed-bench/srad_v2/: Makefile  srad  srad-device-cuda-nvptx64-nvidia-cuda-sm_20.ll  srad.ll  srad_kernel.cu
nvgpu/: AddrSpaceAnalysis.cpp  BranchDivergeAnalysis.cpp  BranchDivergeAnalysis.h  BugEmitter.cpp  BugEmitter.h  CMakeLists.txt  Cfg.h  InstructionMixAnalysis.cpp  LLVMCfg.cpp  LLVMCfg.h  MemCoalesceAnalysis.cpp  MemCoalesceAnalysis.h  OffsetOps.cpp  OffsetOps.h  OffsetPropagation.cpp  OffsetPropagation.h  OffsetVal.cpp  OffsetVal.h  TTSemElem.h  ThreadDepAnalysis.cpp  ThreadDepAnalysis.h  ThreadTaint.cpp  ThreadTaint.h  ThreadValueAnalysis.cpp  ThreadValueAnalysis.h  Utilities.cpp  Utilities.h  VarSet.cpp  VarSet.h
test/: .gitignore  check.sh  device-debug.ll  device.ll  gpu-check  gpucheck-results.csv  loopkernel-device-cuda-nvptx64-nvidia-cuda-sm_20.bc  loopkernel-device-cuda-nvptx64-nvidia-cuda-sm_20.ll  loopkernel.bc  loopkernel.cu  loopkernel.ll  results.py  run-gpu-check.sh
test/gcheckData/nn/: tmp  (+1 more)
wali-opennwa-4.1/: .sconsign.dblite
(+147 files in other folders)
